# obsPlugins

./: README.md  desktop.ini
jr/: CMakeLists.txt  WinCleanFiles.bat  buildPluginsForRelease.bat  jrDark.qss
jr/ObsAutoZoom/: CMakeLists.txt  ObsAutoZoom.sln  copyToObsDir.bat
jr/ObsAutoZoom/ObsAutoZoom/: ObsAutoZoom.vcxproj
jr/ObsAutoZoom/data/: ObsAutoZoomChroma.effect  ObsAutoZoomChromaKey.effect  ObsAutoZoomDilate.effect  ObsAutoZoomFade.effect  ObsAutoZoomOutput.effect
jr/ObsAutoZoom/data/bak/: ObsAutoZoomChroma.effect  ObsAutoZoomChroma_112222.effect  ObsAutoZoomChroma_debug112522good.effect  ObsAutoZoomChroma_obroke.ef
jr/ObsAutoZoom/doc/: ObsAutoZoomInfo.txt
jr/ObsAutoZoom/src/: ObsAutoZoom.h  jrMarkerlessManager.cpp  jrMarkerlessManager.h  jrPlugin.cpp  jrPlugin.h  jrPluginDefs.h  jrRegionDetector.cpp  jrRegionDetector.h  jrSourceTracker.cpp  jrSourceTracker.h  jrTrackedSource.cpp  jrTrackedSource.h  jrTrackedSourceMisc.cpp  jrTrackedSourceRegionDetect.cpp  jrTrackedSourceRender.cpp  jrTrackedSourceZoomBox.cpp  jrazcolorhelpers.cpp  jrazcolorhelpers.h  jrfuncs.h  obsHelpers.cpp  obsHelpers.h  pluginCodeCalibrate.cpp  pluginCodeHelper.cpp  pluginCodeMain.cpp  pluginCodeMisc.cpp  pluginCodePerform.cpp  pluginCodeRender.cpp  pluginCodeSetttings.cpp  pluginInfo.h  source_list.cpp  source_list.h
jr/ObsAutoZoom/x64/Release/: ObsAutoZoom.exp  ObsAutoZoom.lib
jr/ObsScreenFlip/: CMakeLists.txt  ObsScreenFlip.sln  copyToObsDir.bat
jr/ObsScreenFlip/Internal/: mySettings.txt
jr/ObsScreenFlip/ModifcationsToObs/: obs.c  obs.h  window-basic-main.cpp
jr/ObsScreenFlip/ObsScreenFlip/: ObsScreenFlip.vcxproj
jr/ObsScreenFlip/src/: ObsScreenFlip.cpp  ObsScreenFlip.h  jrPlugin.cpp  jrPlugin.h  jrPluginDefs.h  jrPluginMainRenderHook.cpp  jrfuncs.cpp  obsHelpers.cpp  obsHelpers.h  obsSf_options.cpp  pluginCodeSetttings.cpp  pluginInfo.h  pluginInfo.hpp  pluginMainRenderHook.cpp  pluginRender.cpp
jr/YoutubeDockCustomCss/: YoutubeDockCustomCss.txt
jr/browserTimer/: cft.js  index.html
jr/browserTimer/css/: style.css
jr/browserTimer/css/flipdown/: flipdown.css
jr/browserTimer/js/flipdown/: flipdown.js
jr/chatBlinker/: chatblinker.wpr
jr/chatBlinker/doc/: notes.txt
jr/chatBlinker/src/: chatblinker.py
jr/cmake/: ObsPluginHelpers.cmake
jr/com.donationcoder.jrcft.sdPlugin/: app.html  app.js  manifest.json
jr/com.donationcoder.jrcft.sdPlugin/doc/: README.md
jr/com.donationcoder.jrcft.sdPlugin/jrws/js/: jrws.js
jr/jrAutoAspect/: CMakeLists.txt
jr/jrAutoAspect/data/: jrAutoAspect_cropScale.effect
jr/jrAutoAspect/src/: jrautoaspect.cpp  jrautoaspect.hpp  pluginInfo.hpp  pluginSettings.cpp
jr/jrBorder/: CMakeLists.txt
jr/jrBorder/data/: jrborder_border.effect  jrborder_mask.effect
jr/jrBorder/src/: jrborder.cpp  jrborder.hpp  jrborder_module.cpp  pluginInfo.hpp  pluginRender.cpp
jr/jrBorder/src/UNUSED_JUNK/: Clipboard Text.txt
jr/jrBorderSrc/: CMakeLists.txt
jr/jrBorderSrc/data/: jrbordersrc.effect
jr/jrBorderSrc/src/: jrbordersrc.cpp  jrbordersrc.hpp  pluginInfo.hpp  pluginSettings.cpp
jr/jrScreenFlip/: CMakeLists.txt
jr/jrScreenFlip/data/: jrScreenFlip.effect
jr/jrScreenFlip/junk/: copyToObsDir.bat  jrScreenFlip.sln
jr/jrScreenFlip/src/: jrScreenFlip.cpp  jrScreenFlip.hpp  jrScreenFlip_options.cpp  jrScreenFlip_options.hpp  pluginInfo.hpp  pluginMainRenderHook.cpp  pluginRender.cpp  pluginSettings.cpp
jr/jrYoutubeId/: CMakeLists.txt
jr/jrYoutubeId/src/: jryoutubeid.cpp  jryoutubeid.hpp  jryoutubeid_options.cpp  jryoutubeid_options.hpp  pluginInfo.hpp
jr/jrcft/: CMakeLists.txt  CMakeLists.txt.bak
jr/jrcft/helper/com.donationcoder.jrcft.sdPlugin/: app.html  app.js  config.html  config.js  en.json  manifest.json
jr/jrcft/src/: jrcft.cpp  jrcft.hpp  jrcft_options.cpp  jrcft_options.hpp  jrcft_work.cpp  pluginInfo.hpp
jr/jrcommon/src/: jrhelpers.cpp  jrhelpers.hpp  jrobshelpers.cpp  jrobshelpers.hpp  jrobsplugin.cpp  jrobsplugin.hpp  jrobsplugin_options.cpp  jrobsplugin_options.hpp  jrobsplugin_source.cpp  jrobsplugin_source.hpp  jrobsplugin_source_globalfuncs.hpp  jrqthelpers.cpp  jrqthelpers.hpp
jr/jrcommon/src/unused/: jrobsplugin_source_globalfuncs.cpp  jrobsplugin_source_globalfuncs.hpp
jr/jrdockie/: CMakeLists.txt
jr/jrdockie/release/: README.txt
jr/jrdockie/src/: jrdockie.cpp  jrdockie.hpp  jrdockie_options.cpp  jrdockie_options.hpp  pluginInfo.hpp
jr/jrnotedock/: CMakeLists.txt
jr/jrnotedock/src/: jrnotedock.cpp  jrnotedock.hpp  jrnotedock_options.cpp  jrnotedock_options.hpp  pluginInfo.hpp
jr/jrstats/: CMakeLists.txt
jr/jrstats/data/locale/: en-US.ini
jr/jrstats/src/: jrstats.cpp  jrstats.hpp  jrstats_options.cpp  jrstats_options.hpp  pluginInfo.hpp
jr/jrtimestamps/: CMakeLists - Copy.txt  CMakeLists.txt
jr/jrtimestamps/src/: jrtimestamps.cpp  jrtimestamps.hpp  jrtimestamps_options.cpp  jrtimestamps_options.hpp  pluginInfo.hpp
jr/jrtimestamps/timestampOffset/: testts.bat  timestamp.txt  timestamp_out.txt  tsoffset.py
jr/jryoutubechat/: CMakeLists.txt
jr/jryoutubechat/helpers/: JrYtChat-release.apk
jr/jryoutubechat/helpers/jrYoutubeWsChatBrowser/: jrYoutubeWsChatBrowser.html  jrytControl.html  jrytOverlay.html
jr/jryoutubechat/helpers/ytchatmon/: ytchatmon.wpr
jr/jryoutubechat/src/: chatStats.cpp  chatStats.hpp  chatvote.cpp  chatvote.cpp.bak  chatvote.hpp  chatvote.hpp.bak  jryoutubechat.cpp  jryoutubechat.hpp  jryoutubechatItems.cpp  jryoutubechat_options.cpp  jryoutubechat_options.hpp  myQtItemDelegate.hpp  pluginInfo.hpp  pluginInfo.hpp.bak
jr/jrytdock/: CMakeLists.txt
jr/jrytdock/src/: jrytdock.cpp  jrytdock.hpp  jrytdock_options.cpp  jrytdock_options.hpp  pluginInfo.hpp
jr/modsToCore/: youTubeCustomObsCssBrief.txt
jr/obs-textml/: CMakeLists.txt
jr/obs-textml/doc/: Notes.txt
jr/obs-textml/gdiplus/: jrcolorhelper.cpp  jrcolorhelper.hpp  obs-textml.cpp  winklerrgbhsv.cpp  winklerrgbhsv.hpp
jr/obs-textml/release/: Notes.txt
jr/transition-fadeDelayed/: CMakeLists.txt  transition-fadeDelayed.c  zipbakcurdir.bat
jr/transition-fadeDelayed/data/locale/: en-US.ini
(+63 files in other folders)
